<resources>
    <string name="app_name">Zadi</string>
    <string name="your_location_title">Your location</string>
    <string name="location_msg">We need to have your location to show the nearest supermarkets to you</string>
    <string name="allow">Allow</string>
    <string name="select_language">Select language</string>
    <string name="select_language_msg">You can always change the application language in the application settings</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="no_internet">Please check you connectivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_location_title">Select your location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="payment">Payment</string>

</resources>
