<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/your_location_title"
        android:textColor="@color/outer_space"
        android:textSize="29sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_title"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/location_msg"
        android:textColor="@color/battleship_grey"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/allow_location_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_msg"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_step_location" />

    <Button
        android:id="@+id/allow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allow_location_iv"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_orange"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingEnd="@dimen/_60sdp"
        android:paddingStart="@dimen/_60sdp"
        android:paddingTop="@dimen/_15sdp"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>